--- a/index.html
+++ b/index.html
@@ -91,10 +91,8 @@
       <nav class="navbar">
         <div class="container">
           <!-- Logo -->
-          <h1 id="logo">
-            <a href="https://github.com/CommunityPro/portfolio-html"
-              ><img src="./assets/logo.png" alt="Your Logo"
-            /></a>
+          <h1>
+            Portfolio
           </h1>
           <!-- Navbar links -->
           <ul class="nav-menu">
@@ -130,10 +128,10 @@
       <section class="header-container">
         <img
           class="profile-image"
-          src="assets/profile-image.svg"
+          src="assets/profile-image.jpg"
           alt=""
         />
-        <h1>Hi I'm Franklin</h1>
+        <h1>Hi I'm Tayyaba</h1>
 
         <div class="content-text">
           <h2>Building digital</h2>
