updated resume and contact

--- a/index.html
+++ b/index.html
@@ -92,17 +92,21 @@
         <div class="container">
           <!-- Logo -->
           <h1>
-            Portfolio
+            <a href="#">
+              Portfolio
+            </a>
           </h1>
           <!-- Navbar links -->
           <ul class="nav-menu">
             <li><a class="nav-link" href="#projects">PROJECTS</a></li>
-            <li><a class="nav-link" href="#">CONTACT</a></li>
-            <li><a class="nav-link" href="#">BlOG</a></li>
+            <li><a class="nav-link" href="#footer">CONTACT</a></li>
+            <!-- <li><a class="nav-link" href="#">BlOG</a></li> -->
+            
             <li>
               <a
                 class="nav-link btn btn-primary"
-                href="https://github.com/CommunityPro/portfolio-html"
+                href="https://indigo-alta-15.tiiny.site"
+                target="_blank"
                 >RESUME <i class="fas fa-arrow-right"></i
               ></a>
             </li>
@@ -134,16 +138,17 @@
         <h1>Hi I'm Tayyaba</h1>
 
         <div class="content-text">
-          <h2>Building digital</h2>
-          <h2>products, brands, and experience.</h2>
-
+          
+          <h2>Analyzing data, enhancing quality, <br>
+            and visualizing insights
+          </h2>
           <p>
-            A Frontend Developer and Visual Designer with experience in web
-            design, brand identity and product design.
+            Python | SQL | Tableau
           </p>
+
         </div>
         <a
-          href="https://github.com/CommunityPro/portfolio-html"
+          href="https://www.linkedin.com/in/tayyaba-saleem-00b8a58a/"
           class="btn btn-secondary"
           target="_blank"
           >Connect With Me</a
@@ -164,7 +169,7 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project One</h3>
+              <!-- <h3>Project One</h3> -->
               <p>React, Redux, SASS</p>
             </div>
 
@@ -251,28 +256,34 @@
         </div>
       </article>
 
-      <a href="#" class="btn btn-secondary"
+      <!-- <a href="#" class="btn btn-secondary"
         target="_blank" >See More <i class="fas fa-arrow-right"></i
-      ></a>
+      ></a> -->
     </section>
 
+    <!-- contact -->
+    <div class="content-text">
+      <h2>Contact</h2>
+    </div>
     <footer id="footer">
       <div class="container">
-        <a href="mailto:communitypro47@gmail.com">communitypro47@gmail.com</a>
+        <a href="mailto:sal.taiyaba@gmail.com">sal.taiyaba@gmail.com</a>
         <!-- Social links -->
         <div class="social">
-          <a href="#" target="_blank"
-            ><img src="./assets/facebook-icon.svg" alt="Facebook"
+          <!-- <a href="#" target="_blank">
+            <img src="./assets/facebook-icon.svg" alt="Facebook"/></a> -->
+          <!-- <a href="#" target="_blank">
+            <img src="./assets/twitter-icon.svg" alt="Twitter" /></a> -->
+          <a href="https://www.linkedin.com/in/tayyaba-saleem-00b8a58a/" target="_blank">
+            <img src="./assets/linkedin-icon.svg" alt="Linkedin"
           /></a>
-          <a href="#" target="_blank"><img src="./assets/twitter-icon.svg" alt="Twitter" /></a>
-          <a href="#" target="_blank"
-            ><img src="./assets/linkedin-icon.svg" alt="Linkedin"
-          /></a>
-          <a href="#" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
-          <a href="#" target="_blank"
-            ><img src="./assets/hashnode-icon.svg" alt="Hashnode"
+          <a href="https://github.com/Jea-k" target="_blank">
+            <img src="./assets/github-icon.svg" alt="GitHub" /></a>
+          <a href="https://public.tableau.com/app/profile/tayyaba.saleem" target="_blank"
+            ><img src="./assets/tableau_icon.svg" alt="Tableau"
           /></a>
         </div>
+
         <!-- Attribution -->
         <div class="attribution">
           <a
