added projects info

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <div class="division"></div>
       <div class="content-text">
         <h2>Projects</h2>
-        <p>Check out some of my personal and paid projects</p>
+        <p>Check out some of my personal projects</p>
       </div>
 
       <article class="project">
@@ -169,13 +169,14 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <!-- <h3>Project One</h3> -->
-              <p>React, Redux, SASS</p>
+              <h3>Electric Vehicles Analysis</h3>
+              <p>Pandas, NumPy, Plotly, Reveal.js, Tableau</p>
             </div>
-
+           
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/Jea-k/data_analytics/tree/main/evolution_of_electric_vehicles_and_impact" target="_blank">
+                <i class="fab fa-github"></i></a>
+              <a href="ev_project.html" target="_blank"><i class="far fa-file-powerpoint"></i></a>
             </div>
           </div>
         </div>
@@ -184,17 +185,23 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Two</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Sales Analysis - Food Delivery Service </h3>
+              <p>Pandas, Tableau </p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/Jea-k/data_analytics/tree/main/sales_analyst_food_delivery" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://public.tableau.com/app/profile/tayyaba.saleem/viz/sales_analyst_viz/Story1" target="_blank"><img src="./assets/icons8-tableau-software.svg" alt="Tableau"/></a>
+              <a href="https://pitch.com/public/309451d0-7618-4fc8-9f19-bf7391e99510" target="_blank"><i class="far fa-file-powerpoint"></i></a>
             </div>
           </div>
         </div>
-
+        <style>.project-link {
+          display: flex; /* Use flexbox to align items horizontally */
+          gap: 10px; /* Adjust the gap between the icons */
+        }
+        </style>
+        
         <!-- Porject 3 -->
         <div href="" class="card">
           <div class="project-info">
