updated see more link

--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
         </div>
       </article>
 
-      <a href="#" class="btn btn-secondary"
-        target="_blank" >See More <i class="fas fa-arrow-right"></i
+      <a href="https://github.com/Jea-k/data_analytics/tree/main" class="btn btn-secondary"
+        target="_blank" >See More on Github <i class="fas fa-arrow-right"></i
       ></a>
        <style>.project-link {
           display: flex; /* Use flexbox to align items horizontally */
