--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <!-- <h3>Sales Analysis - Food Delivery Service </h3> -->
+              <!-- <h3>Sales Analysis</h3> -->
               <h3>
-                <a href="https://pitch.com/public/309451d0-7618-4fc8-9f19-bf7391e99510" target="_blank">Sales Analysis - Food Delivery Service</a>
+                <a href="https://pitch.com/public/309451d0-7618-4fc8-9f19-bf7391e99510" target="_blank">Sales Analysis</a>
               </h3>
               <p>Pandas, Tableau </p>
             </div>
