removed fav icon

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     />
 
     <!-- Link -->
-    <link
+    <!-- <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="assets/favicon/apple-touch-icon.png"
@@ -73,9 +73,11 @@
       type="image/png"
       sizes="512x512"
       href="assets/favicon/android-chrome-512x512.png"
-    />
-    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
-    <link rel="manifest" href="assets/favicon/site.webmanifest" />
+    /> -->
+    <!-- <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" /> -->
+    <!-- <link rel="manifest" href="assets/favicon/site.webmanifest" /> -->
+    <link rel="icon" href="data:,">
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -191,7 +193,7 @@
             <div class="project-bio">
               <!-- <h3>Sales Analysis</h3> -->
               <h3>
-                <a href="https://pitch.com/public/309451d0-7618-4fc8-9f19-bf7391e99510" target="_blank">Sales Analysis</a>
+                <a href="https://pitch.com/public/309451d0-7618-4fc8-9f19-bf7391e99510" target="_blank">Sales Analysis - Food Delivery Service</a>
               </h3>
               <p>Pandas, Tableau </p>
             </div>
