--- a/index.html
+++ b/index.html
@@ -231,7 +231,10 @@
          <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Climate Data Analysis</h3>
+              <!-- <h3>Climate Data Analysis</h3> -->
+              <h3>
+                <a href="https://pitch.com/public/ec718604-d21f-4a0e-a3a4-945f252dfa80" target="_blank">Climate Data Analysis</a>
+              </h3>
               <p>SQL, Pandas, SQLalchemy, Plotly, Matplotlib, NumPy</p>
             </div>
 
@@ -249,7 +252,10 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Movies Data Analysis</h3>
+              <!-- <h3>Movies Data Analysis</h3> -->
+              <h3>
+                <a href="https://github.com/Jea-k/data_analytics/blob/main/movies_database_using_SQL/README.md" target="_blank">Movies Data Analysis</a>
+              </h3>
               <p>SQL</p>
             </div>
 
@@ -265,7 +271,10 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Capital Bikeshare Data Analysis</h3>
+              <!-- <h3>Capital Bikeshare Data Analysis</h3> -->
+              <h3>
+                <a href="https://github.com/Jea-k/data_analytics/blob/main/DC_bike_rentals_analysis/README.md" target="_blank">Capital Bikeshare Data Analysis</a>
+              </h3>
               <p>Pandas, Scipy, Statmodels, NumPy, Sklearn, Seaborn, Matplotlib</p>
             </div>
 
